# list_jeu_rust

./: .env  Cargo.toml  Dockerfile  docker-compose.yml  readme.md
entity/: Cargo.toml
entity/src/: faritany_point.rs  faritany_room.rs  faritany_room_utilisateur.rs  lib.rs  mod.rs  prelude.rs  utilisateur.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250718_121104_create_utilisateur_table.rs  m20250719_092057_create_room_faritany.rs  m20250719_093834_create_room_utilisateur_faritany.rs  m20250719_105608_create_point_faritany.rs
src/: main.rs
src/list_jeu/: game_logic.rs  mod.rs
src/list_jeu/faritany/: direction.rs  faritany_logique.rs  grid.rs  message.rs  mod.rs  player.rs  point.rs
src/routers_http/: auth_routes.rs  home_routes.rs  mod.rs  room_routes.rs  utilisateur_routes.rs
src/routers_http/handlers/: auth_handler.rs  home_handler.rs  mod.rs  room_handler.rs  utilisateur_handler.rs
src/routers_http/middlewares/: auth_middleware.rs
src/routers_websocket/: mod.rs  room_routes.rs
src/routers_websocket/handlers/: start_connection.rs
src/routers_websocket/websocket/: lobby.rs  messages.rs  ws.rs
src/utils/: api_response.rs  app_state.rs  constants.rs  jwt.rs  mod.rs  referrer_policy.rs
