[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" } 
actix = "0.13.5"
actix-web = "4.5.1"
actix-web-actors = "4.3.1"
serde = "1.0.197"
serde_json = "1.0.1"
env_logger = "0.11.3"
dotenv = "0.15.0"
lazy_static = "1.4.0"
sea-orm = { version = "1.1.13", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
sha256 = "1.5.0"
chrono = "0.4.37"
jsonwebtoken = "9.3.0"
actix-web-lab = "0.24.2"
actix-multipart = "0.7.2"
sanitize-filename = "0.6.0"
uuid = { version = "1", features = ["v4"] }
url = "2"
